--- a/java2/package.json
+++ b/java2/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "prettier": "2.7.1",
     "sass": "^1.55.0",
     "vite": "^3.1.0"
   },
